プライバシーポリシー追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -90,6 +90,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 					href="https://www.youtube.com/channel/UCHV3Taosn76pn9_ip1u7Zkg"
 				/>
 			</div>
+			<a href="/policy">プライバシーポリシー</a>
 		</footer>
 
 		<style is:global>
