--- a/src/pages/policy.astro
+++ b/src/pages/policy.astro
@@ -2,7 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout ogType="blog">
+<Layout ogType="article" title="プライバシーポリシー" description="プライバシーポリシーです。">
 	<div id="contents">
 		<h2>広告について</h2>
 		<p>
