--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout ogType="article" title="404 Not Fooooooo!!" description="ページが見つかりませんでした！！！">
+<Layout notFound ogType="article" title="404 Not Fooooooo!!" description="ページが見つかりませんでした！！！">
 	<div id="contents">
 		<p>ページがみつかりませんでした！</p>
 	</div>
