--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,10 @@ posts.contents.forEach((post) => {
 						{formatDate(post.publishedAt ?? post.createdAt)}
 					</time>
 					<div>
-						{post.thumbnail !== undefined && (
+						{post.thumbnail !== undefined ? (
 							<img class="post-thumbnail" src={`${post.thumbnail.url}?fm=webp&w=600`} />
+						) : (
+							<img class="post-thumbnail" src="/default-thumbnail.png" />
 						)}
 						<h2 class="post-title">{post.title}</h2>
 					</div>
@@ -77,22 +79,29 @@ posts.contents.forEach((post) => {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr 1fr;
 		gap: 20px;
-		padding: 30px;
+		padding: 0 30px 0;
 		width: 100%;
 		max-width: 1200px;
 		margin: 0 auto;
 
-		@media (max-width: 900px) {
+		@media (max-width: 970px) {
 			grid-template-columns: 1fr 1fr 1fr;
+		}
+
+		@media (max-width: 800px) {
+			grid-template-columns: 1fr 1fr;
 		}
 
 		@media (max-width: 700px) {
 			grid-template-columns: 1fr 1fr;
+			padding-left: 5px;
+			padding-right: 5px;
 		}
 
 		@media (max-width: 600px) {
 			grid-template-columns: 1fr;
-			padding: 5px;
+			padding-left: 5px;
+			padding-right: 5px;
 		}
 
 		.post-card {
