--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,15 +25,17 @@ const posts = await getListAllContents<Blog>("blogs");
 					</div>
 					<div class="post-tags">
 						{post.tags.map((tag) => {
+							const size = 20;
+
 							return (
 								<div class="post-tag">
-									{/* <img
+									<img
 										class="post-tag-icon"
-										src={""}
+										src={`/logo/${tag.id}.png`}
 										width={size}
 										height={size}
 										alt={`${tag.name}のアイコン`}
-									/> */}
+									/>
 									<span class="post-tag-name">{tag.name}</span>
 								</div>
 							);
@@ -87,10 +89,10 @@ const posts = await getListAllContents<Blog>("blogs");
 			flex-direction: column;
 			justify-content: space-between;
 			position: relative;
-			background-color: white;
 			padding: 40px 10px 10px;
 			box-shadow: 0 0 3px #cccccc;
 			transition-duration: 200ms;
+			z-index: 1;
 
 			.post-date {
 				position: absolute;
@@ -112,7 +114,7 @@ const posts = await getListAllContents<Blog>("blogs");
 
 			.post-tags {
 				display: flex;
-				gap: 5px;
+				gap: 7px;
 				flex-wrap: wrap;
 				align-items: center;
 				padding-top: 30px;
@@ -122,6 +124,10 @@ const posts = await getListAllContents<Blog>("blogs");
 					gap: 5px;
 					flex-wrap: wrap;
 					align-items: center;
+
+					.post-tag-icon {
+						border-radius: 9999px;
+					}
 
 					.post-tag-name {
 						font-size: 10px;
@@ -143,62 +149,84 @@ const posts = await getListAllContents<Blog>("blogs");
 				width: 100%;
 				height: 100%;
 
-				:global(.flow-tag) {
+				&:after {
 					position: absolute;
-					width: 40px;
-					aspect-ratio: 1/1;
-					top: 90%;
-					image-rendering: pixelated;
+					content: "";
+					display: block;
+					top: 0;
+					left: 0;
+					background-color: white;
+					width: 100%;
+					height: 100%;
+					transition-duration: 200ms;
+					transition-property: background-color;
+					z-index: -1;
+				}
+
+				&:hover {
+					&:after {
+						background-color: #7cee8b;
+					}
+				}
+
+				:global(.flow-tag-wrapper) {
+					position: absolute;
+					bottom: 0;
+					display: block;
+					width: 50px;
+					height: 50px;
+					border-radius: 100%;
+					box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.6) inset;
+					-webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.6) inset;
+					animation-name: bubbleTag;
+					animation-duration: 3000ms;
 					animation-iteration-count: 1;
 					animation-timing-function: ease-out;
 					opacity: 0;
 					user-select: none;
 					pointer-events: none;
+					background-color: #90e5ff57;
+					z-index: calc(infinity);
 
-					&[data-tag="astro"] {
-						animation-name: tagAnimationAstro;
-						animation-duration: 1500ms;
+					&:after {
+						content: "";
+						display: block;
+						width: 20%;
+						height: 20%;
+						border-radius: 100%;
+						background: rgba(255, 255, 255, 0.8);
+						position: absolute;
+						right: 15%;
+						top: 15%;
+						filter: blur(2px);
+						transform: rotateZ(45deg) scaleY(0.8);
 					}
 
-					@keyframes tagAnimationAstro {
+					@keyframes bubbleTag {
 						0% {
-							transform: translateX(5px);
-						}
-						5% {
-							transform: translateX(-5px);
-						}
-						10% {
-							transform: translateX(5px);
-						}
-						15% {
-							transform: translateX(-5px);
+							opacity: 0;
+							transform: translateX(-25px) translateY(0);
 						}
 						20% {
-							transform: translateX(5px);
-						}
-						25% {
-							transform: translateX(-5px);
-						}
-						30% {
-							transform: translateX(5px);
-						}
-						35% {
-							transform: translateX(-5px);
-						}
-						40% {
-							transform: translateX(5px);
-						}
-						45% {
-							transform: translateX(-5px);
+							opacity: 1;
 						}
 						50% {
 							opacity: 1;
-							transform: translateY(0);
 						}
 						100% {
 							opacity: 0;
-							transform: translateY(-500px);
+							transform: translateX(-25px) translateY(-500px);
 						}
+					}
+
+					:global(.flow-tag) {
+						position: absolute;
+						width: 70%;
+						border-radius: 9999px;
+						aspect-ratio: 1/1;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%, -50%);
 					}
 				}
 			}
@@ -223,20 +251,20 @@ const posts = await getListAllContents<Blog>("blogs");
 						const delay = Math.random() * 2001;
 						const x = Math.random() * postLink.clientWidth + 1 + "px";
 
-						if (tagId !== "astro") {
-							return;
-						}
-
 						setTimeout(() => {
+							const wrap = document.createElement("div");
+							wrap.classList.add("flow-tag-wrapper");
+
 							const icon = document.createElement("img");
-							icon.src = `/tag-logos/${tagId}.gif`;
+							icon.src = `/logo/${tagId}.png`;
 							icon.classList.add("flow-tag");
 							icon.dataset.tag = tagId;
-							icon.style.left = x;
-							postLink.appendChild(icon);
+							wrap.style.left = x;
+							postLink.appendChild(wrap);
+							wrap.appendChild(icon);
 							setTimeout(() => {
-								icon.remove();
-							}, 6000);
+								wrap.remove();
+							}, 3001);
 						}, delay);
 					});
 				},
