--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -101,6 +101,7 @@ if (html !== null) {
 				.post-tag-icon {
 					border-radius: 9999px;
 					width: 25px;
+					background-color: #dfdfdf;
 				}
 
 				.post-tag-name {
