--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -126,6 +126,7 @@ const posts = await getListAllContents<Blog>("blogs");
 					align-items: center;
 
 					.post-tag-icon {
+						background-color: #eeeeee;
 						border-radius: 9999px;
 					}
 
