--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -150,6 +150,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 
 					.header-nav-link {
 						display: flex;
+						position: relative;
 						justify-content: center;
 						align-items: center;
 						text-decoration: none;
@@ -158,8 +159,21 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 						background-color: #ed5841;
 						font-size: 18px;
 						color: white;
-						transition-duration: 200ms;
-						transition-property: background-color;
+						z-index: 1;
+
+						&:after {
+							position: absolute;
+							display: block;
+							content: "";
+							top: 0;
+							left: 0;
+							width: 100%;
+							height: 100%;
+							opacity: 0;
+							transition-duration: 300ms;
+							transition-property: opacity;
+							z-index: -1;
+						}
 
 						@media (max-width: 700px) {
 							font-size: 15px;
@@ -184,20 +198,37 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 						}
 
 						&:hover {
-							background-color: #f26f5b;
-						}
-
-						&[href^="https://twitter.com/"]
-						{
-							&:hover {
-								background-color: #4593c3;
+							&:after {
+								opacity: 1;
+								background-color: #f26f5b;
 							}
 						}
 
-						&[href^="https://github.com/"]
+						&[href^="https://twitter.com"]
 						{
 							&:hover {
-								background-color: #606060;
+								&:after {
+									background-color: #4593c3;
+								}
+							}
+						}
+
+						&[href^="https://github.com"]
+						{
+							&:hover {
+								&:after {
+									background-color: #606060;
+								}
+							}
+						}
+
+						&[href^="https://coffee.aki.wtf"]
+						{
+							&:hover {
+								&:after {
+									background-image: url(https://r2.coffee.aki.wtf/aydb7jwmw.png);
+									background-position: center center;
+								}
 							}
 						}
 					}
