--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -131,6 +131,10 @@ if (html !== null) {
 				border-bottom: 1px solid black;
 				margin-top: 40px;
 				font-size: 20px;
+
+				@media (prefers-color-scheme: dark) {
+					border-bottom: 1px solid white;
+				}
 			}
 
 			& :global(pre > code),
@@ -159,6 +163,13 @@ if (html !== null) {
 					border-left: 2px solid #2e2e2e;
 					border-right: 2px solid #2e2e2e;
 					font-weight: 700;
+
+					@media (prefers-color-scheme: dark) {
+						background-color: #242424;
+						border-top: 2px solid #242424;
+						border-left: 2px solid #242424;
+						border-right: 2px solid #242424;
+					}
 				}
 			}
 
