--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -173,6 +173,14 @@ if (html !== null) {
 				}
 			}
 
+			& > :global(code) {
+				font-family: "Source Code Pro", monospace;
+				background-color: #242424;
+				color: white;
+				padding: 2px 10px;
+				border-radius: 6px;
+			}
+
 			& :global(.iframely-embed:has(.iframely-responsive)) {
 				display: flex;
 				justify-content: center;
