スタイル修正

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -173,7 +173,7 @@ if (html !== null) {
 				}
 			}
 
-			& > :global(code) {
+			& > :global(p > code) {
 				font-family: "Source Code Pro", monospace;
 				background-color: #242424;
 				color: white;
