--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -179,6 +179,9 @@ if (html !== null) {
 				color: white;
 				padding: 2px 10px;
 				border-radius: 6px;
+				font-size: 13px;
+				margin: 0 5px;
+				vertical-align: middle;
 			}
 
 			& :global(.iframely-embed:has(.iframely-responsive)) {
