--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,7 +52,7 @@ const schema = {
 		<!-- End Google Tag Manager -->
 		<meta property="og:url" content={`${Astro.site}${path}`} />
 		<meta property="og:type" content={ogType} />
-		<meta property="og:title" content={pageTitle} />
+		<meta property="og:title" content={title ?? serviceTitle} />
 		<meta property="og:description" content={description} />
 		<meta property="og:site_name" content={serviceTitle} />
 		<meta property="og:image" content={ogImage} />
@@ -61,6 +61,9 @@ const schema = {
 			content={ogImage === `${Astro.site}default-ogp.png` ? "summary" : "summary_large_image"}
 		/>
 		<meta name="twitter:site" content="@Akime_Aki" />
+		<meta name="twitter:title" content={title ?? serviceTitle} />
+		<meta name="twitter:description" content={description} />
+		<meta name="twitter:image" content={ogImage} />
 		<link rel="icon" href="/favicon.ico" />
 		<title>{pageTitle}</title>
 		<script type="application/ld+json" is:inline set:html={JSON.stringify(schema)} />
